--- a/index.css
+++ b/index.css
@@ -21,12 +21,15 @@ body {
 .navbar{
     background-color: rgb(84, 61, 253);
      color: white;
+     height: 50px;
+      width: auto;
 } 
 .navbar .container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     list-style-type: none;
+    height: 50px;
  }
  .navbar .container .logo{
     width: 50rem;
